adding tallymarks npm and applying to header.js

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "tally-marks": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
