--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "tally-marks": "^1.0.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -33,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://ypangilinan.github.io/clicky-game/"
 }
